# audiocraft-installable

./: README.md  pyproject.toml
.github/actions/audiocraft_build/: action.yml
.github/workflows/: audiocraft_tests.yml
api_docs/audiocraft/adversarial/: losses.html
api_docs/audiocraft/adversarial/discriminators/: base.html  mpd.html  msd.html  msstftd.html
api_docs/audiocraft/data/: audio.html
api_docs/audiocraft/losses/: loudnessloss.html  sisnr.html  specloss.html  stftloss.html  wmloss.html
api_docs/audiocraft/metrics/: chroma_cosinesim.html  clap_consistency.html  fad.html  kld.html  pesq.html  rvm.html
api_docs/audiocraft/models/: encodec.html  flow_matching.html  lm.html  lm_magnet.html  loaders.html  unet.html  watermark.html
api_docs/audiocraft/modules/: activations.html  chroma.html  conditioners.html  conv.html  diffusion_schedule.html  index.html  jasco_conditioners.html  lstm.html  rope.html  seanet.html  streaming.html  transformer.html  unet_transformer.html
api_docs/audiocraft/optim/: cosine_lr_scheduler.html  dadam.html  inverse_sqrt_lr_scheduler.html  linear_warmup_lr_scheduler.html  polynomial_decay_lr_scheduler.html
api_docs/audiocraft/quantization/: base.html  core_vq.html  vq.html
api_docs/audiocraft/solvers/: builders.html  magnet.html
api_docs/audiocraft/utils/: checkpoint.html  cluster.html
audiocraft/data/: audio.py
audiocraft/metrics/: clap_consistency.py  kld.py
audiocraft/models/: builders.py  encodec.py  flow_matching.py  jasco.py  loaders.py  watermark.py
audiocraft/modules/: codebooks_patterns.py  conditioners.py  jasco_conditioners.py  transformer.py
audiocraft/solvers/: compression.py  magnet.py  musicgen.py  watermark.py
audiocraft/utils/: checkpoint.py
tests/models/: test_watermark.py
